--- a/content/css/default.css
+++ b/content/css/default.css
@@ -104,8 +104,8 @@ table {
   background-color: #F4F7FA;
   min-height: 100vh;
   padding-bottom: 50px;
-  background: url('../imagens/fundo.jpg') fixed;
-  background-position: right;
+  background: url('../imagens/fundo.jpg');
+  /*background-position: right;*/
 
 }
 
