--- a/content/css/site.css
+++ b/content/css/site.css
@@ -176,6 +176,18 @@ a.text-info:hover
 	border-color: #C12054;
 }
 
+.btn-info
+{
+	background-color: #336CD2;
+	border-color: #336CD2;
+}
+
+.btn-warning
+{
+	background-color: #EDC127;
+	border-color: #EDC127;
+}
+
 .btn-outline-danger 
 {
   color:#DD3068;
@@ -260,5 +272,14 @@ input[type="text"]:disabled {
 	max-height: 648px;
 	overflow-y: auto;
 	overflow-x: hidden;
+	color: black;
+}
+
+.inscricoes
+{
+	background-color: white;
+	height: 185px;
+	max-height: 185px;
+	overflow: auto;
 	color: black;
 }
