--- a/content/css/site.css
+++ b/content/css/site.css
@@ -35,6 +35,7 @@ nav::-webkit-scrollbar-thumb {
   outline: 1px solid slategrey;
 }
 
+
 .menu-color{
 	
 	transition: 0.5s;
@@ -183,9 +184,14 @@ a.text-info:hover
 
 .btn-info
 {
-		background-color: #007bff;
+	background-color: #007bff;
 	border-color: #007bff;
-	
+}
+
+.btn-info.disabled, .btn-info:disabled
+{
+	background-color: #007bff;
+	border-color: #007bff;	
 }
 
 .btn-info:hover
@@ -279,9 +285,9 @@ input[type="text"]:disabled {
 .alunos
 {
 	background-color: white;
-	height: 643px;
+	height: 400px;
 	border-radius: 5px 5px 0px 0px;
-	max-height: 643px;
+	max-height: 400px;
 	overflow-y: auto;
 	overflow-x: hidden;
 	color: black;
