--- a/content/css/site.css
+++ b/content/css/site.css
@@ -214,6 +214,35 @@ background-color: #336CD2;
   border-color: #DD3068;
 }
 
+.btn-simple-white
+{
+  color:#fff;
+  padding: 4px;
+  background-color: transparent;
+  background-image: none;
+  border-color: #fff;
+}
+
+.btn-simple-white:focus 
+{
+  -webkit-box-shadow: none;
+  color:#fff;
+  outline: none;
+  background-color: transparent;
+  background-image: none;
+  border-color: #fff;
+}
+
+.btn-simple-white:hover
+{
+  color:#fff;
+  background-color: transparent;
+  background-image: none;
+  border-color: #fff;
+}
+
+
+
 .btn-outline-danger:hover 
 {
   background-color: #DD3068;
@@ -267,6 +296,10 @@ legend{
 	font-size: 18px;
 }
 
+fieldset{
+	 border-radius: 5px 5px 5px 5px;
+}
+
 input[type="text"]:disabled {
     background-color: rgb(50,50,50);
     border-bottom: 1px solid white;
@@ -285,9 +318,9 @@ input[type="text"]:disabled {
 .alunos
 {
 	background-color: white;
-	height: 400px;
-	border-radius: 5px 5px 0px 0px;
-	max-height: 400px;
+	height: 500px;
+	
+	max-height: 500px;
 	overflow-y: auto;
 	overflow-x: hidden;
 	color: black;
