--- a/content/css/site.css
+++ b/content/css/site.css
@@ -286,7 +286,7 @@ ol.breadcrumb
 	color: black;
 }
 
-.bimestres,.notas_especiais
+.etapas,.etapas_extras
 {
 	background-color: white;
 	height: 185px;
